--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 # ----------------------- #
 
 url: http://yoursite.com
-title: Your Awesome Site
+title: CheCo Media Blue
 email: your-email@domain.com
-author: Your Name
+author: CheCo
 description: > # "Write an awesome description for your new site here. 
   You can edit this line in _config.yml. It will appear in your document 
   head meta (for Google search results) and in your feed.xml site 
   description.
-copyright: 'Copyright &copy; 2015 Your Name. All Rights Reserved.'
-credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
+copyright: 'Copyright &copy; 2015 CheCo Media Blue . All Rights Reserved.'
+
 
 # ----------------------- #
 #    Jekyll & Plugins     #
@@ -26,9 +26,9 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: twitter
+  - title: facebook
     url: https://twitter.com/SBootstrap
-  - title: github
+  - title: youtube
     url: https://github.com/IronSummitMedia/startbootstrap
-  - title: linkedin
+  - title: instagram
     url: 
