--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,13 @@ permalink: pretty
 # ----------------------- #
 
 social:
-  - title: facebook
-    url: https://twitter.com/SBootstrap
+  
   - title: youtube
     url: https://github.com/IronSummitMedia/startbootstrap
   - title: instagram
     url: 
   - title: spotify
     url: 
-    - title: test buttom
-    url: 
+    Shop
+    
 
